<resources>
    <string name="app_name">SyncBooking</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">¿Olvidaste tu contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="resetPassword">Enviar Contraseña</string>
    <string name="logintext">Guarda tus reservas y gestiona tus clientes con facilidad</string>
    <string name="acept">He leído y acepto los</string>
    <string name="terms">términos y condiciones de uso.</string>
    <string name="register">Registrarse</string>

    <string name="empty_email">Introduce un email</string>
    <string name="invalid_email">Email incorrecto</string>

    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>

    <string name="bar_title_terms">Términos y Condiciones de Uso</string>
    <string name="terms1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent rhoncus convallis metus at pretium. Vivamus at lacinia leo. Praesent velit elit, suscipit sit amet pulvinar id, imperdiet ac massa. Quisque molestie lectus rhoncus urna tempor, ut lacinia mi tempor. Praesent volutpat, ligula eget lobortis cursus, mauris libero consequat ligula, nec scelerisque erat ipsum tempor justo. Aliquam ornare faucibus augue vel faucibus. Ut sollicitudin commodo tortor eu faucibus. Vestibulum lacinia ligula sed tortor auctor, vitae sollicitudin lorem dapibus. Phasellus sed tincidunt odio.</string>
    <string name="terms2">Praesent arcu nisi, auctor quis tempor id, vehicula non nulla. Sed a fermentum tellus, quis pharetra lorem. Fusce vehicula libero in ultricies varius. Suspendisse vel velit tortor. Aliquam non nisi eget lectus tempor consectetur sed in magna. Nullam tincidunt, nibh ut sodales suscipit, ante est luctus purus, sed pellentesque ipsum massa et quam. Proin sed sapien ultrices ex aliquet elementum sed et erat. Sed tincidunt felis sapien, a suscipit massa cursus et. Phasellus auctor tellus ac neque maximus accumsan. Morbi sit amet odio nec sapien pharetra elementum maximus id odio. Integer laoreet, neque id efficitur auctor, magna massa consequat justo, quis vehicula ipsum massa at sem. Morbi in ornare sapien, in luctus mauris. </string>
    <string name="terms3">Sed id libero auctor, lacinia lectus a, consequat nisl. Nam quis suscipit purus. Fusce at congue quam. Etiam congue imperdiet bibendum. Etiam at porttitor ipsum. Donec consectetur sapien in neque tempus tempus. Sed vulputate rutrum ultrices. Praesent in est leo. Suspendisse euismod purus id urna tempus pellentesque. Praesent condimentum nisl sit amet purus pulvinar sagittis. Cras purus felis, hendrerit et ornare ut, molestie id orci. Integer dictum consequat leo, id pretium urna tempus et. Donec nibh ante, laoreet id lorem vitae, vestibulum sollicitudin lorem. </string>
    <string name="default_web_client_id">289652127573-9vm82n3l7f77ppja86eo9dj3fdtu36ci.apps.googleusercontent.com</string>

    <string name="bar_title">SyncBooking</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_signout">Cerrar Sesión</string>
    <string name="menu_email">syncbooking7@gmail.com</string>

    <string name="navigation_drawer_open">Menu</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="name">Nombre</string>
    <string name="surnames">Apellidos</string>
    <string name="save">Guardar</string>

    <string name="notes">Notas</string>
    <string name="other">Otros</string>
    <string name="phone">Teléfono</string>
    <string name="contact">Contacto</string>
    <string name="address">Dirección</string>
    <string name="information">Información</string>
    <string name="modifyclient">Modificar cliente</string>
    <string name="deleteclient">Eliminar cliente</string>

    <string name="userregister">Registro de Usuario</string>
    <string name="country">País</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="dateregister">Fecha de registro</string>
    <string name="modifyuser">Modificar usuario</string>
    <string name="deleteuser">Eliminar usuario</string>
    <string name="choose_duration">Duración</string>
    <string name="reservashoy">Reservas hoy</string>

    <string name="modifyreserva">Modificar reserva</string>
    <string name="deletereserva">Eliminar reserva</string>

    <string name="channel_name">Recordatorio de reservas.</string>
    <string name="channel_description">Este canal proporciona notificaciones relacionadas con eventos próximos.</string>

</resources>
