<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkgrey"
    android:paddingTop="60dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:layout_gravity="center_horizontal|bottom"
        android:src="@drawable/final_logo2"
        />


    <TextView
        android:id="@+id/txtInvitation"
        style="@style/viewCustom"
        android:paddingTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/logintext"
        android:textSize="15sp"
        android:textColor="@color/electricblue"
        android:fontFamily="@font/roboto_medium"/>

    <EditText
        android:id="@+id/etEmail"
        style="@style/viewCustom"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingTop="30dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto_medium"/>

    <EditText
        android:id="@+id/etPassword"
        style="@style/viewCustom"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto_medium"/>

    <TextView
        android:id="@+id/tvLogin"
        style="@style/viewCustom"
        android:background="@color/lightblue"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:textAlignment="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:onClick="login"
        android:fontFamily="@font/roboto_medium"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        style="@style/viewCustom"
        android:onClick="forgotPassword"
        android:paddingTop="0dp"
        android:gravity="center_horizontal"
        android:text="@string/forgotPassword"
        android:textSize="12sp"
        android:textColor="@color/electricblue"
        android:fontFamily="@font/roboto_medium"/>

    <LinearLayout
        android:id="@+id/lyTerms"
        style="@style/viewCustom"
        android:orientation="horizontal"
        android:background="@color/darkgrey">
        <CheckBox
            android:id="@+id/cbAcept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/acept"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:buttonTint="@color/electricblue"
            />
        <TextView
            android:id="@+id/tvTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textSize="10sp"
            android:textColor="@color/electricblue"
            android:layout_marginLeft="5dp"
            android:onClick="goTerms"/>

    </LinearLayout>


    <ImageView
        android:id="@+id/btSignGoogle"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:src="@drawable/android_light_rd_ctn_4x"
        android:onClick="callSignInGoogle"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>