<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgrey">

    <!-- Título "Información" -->
    <TextView
        android:id="@+id/informationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/information"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/informationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/informationTitle"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColor="@color/electricblue"
            android:textColorHint="@color/electricblue"
            app:boxStrokeColor="@color/electricblue"
            app:cursorColor="@color/electricblue"
            app:hintTextColor="@color/electricblue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/electricblue" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo "Apellidos" -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surnames"
            android:textColor="@color/electricblue"
            android:textColorHint="@color/electricblue"
            app:boxStrokeColor="@color/electricblue"
            app:cursorColor="@color/electricblue"
            app:hintTextColor="@color/electricblue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/electricblue" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo "Dirección" -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:textColor="@color/electricblue"
            android:textColorHint="@color/electricblue"
            app:boxStrokeColor="@color/electricblue"
            app:cursorColor="@color/electricblue"
            app:hintTextColor="@color/electricblue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:textColor="@color/electricblue" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Título "Contacto" -->
    <TextView
        android:id="@+id/contactTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/informationLayout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/contact"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/contactLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactTitle"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <!-- Campo "Teléfono" -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textColor="@color/electricblue"
            android:textColorHint="@color/electricblue"
            app:boxStrokeColor="@color/electricblue"
            app:cursorColor="@color/electricblue"
            app:hintTextColor="@color/electricblue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/electricblue" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <!-- Título "Otros" -->
    <TextView
        android:id="@+id/otherTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactLayout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/other"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/otherLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otherTitle"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <!-- Campo "Notas" -->


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes"
            android:textColor="@color/electricblue"
            android:textColorHint="@color/electricblue"
            app:boxStrokeColor="@color/electricblue"
            app:cursorColor="@color/electricblue"
            app:hintTextColor="@color/electricblue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="@color/electricblue" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/lyTerms"
            style="@style/viewCustom"
            android:orientation="horizontal"
            android:background="@color/darkgrey">
            <CheckBox
                android:id="@+id/cbAcept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/acept"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:buttonTint="@color/electricblue"
                />
            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textSize="10sp"
                android:textColor="@color/electricblue"
                android:layout_marginLeft="5dp"
                android:onClick="goTerms"/>
        </LinearLayout>


    </LinearLayout>

    <!-- Botón de "Guardar" -->
    <Button
        android:id="@+id/btSaveUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/electricblue"
        android:text="@string/save" />
</RelativeLayout>

